Updating config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: My journey as a Softer Development Student
+title: My journey as a Software Development Student
 header-img: img/home-bg.png
 email: asabogal.git@gmail.com
 copyright_name: asabogal
